--- a/src/css-modules/Nav.css
+++ b/src/css-modules/Nav.css
@@ -1,12 +1,12 @@
 .s-nav-menu {
   background-color: #FFB72D;
-  height: auto;
   padding: 0.5em 0;
   text-align: center;
+  line-height: 2.75em;
 }
 
 .s-nav-menu > h1 {
-  font-size: 2.65em;
+  font-size: 2em;
 }
 
 .s-nav-menu > button:first-child {
