--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,22 @@
 .App {
   text-align: center;
+  background-color: rgb(255, 177, 32);
+  /* max-width: 87%;
+  margin: 5% auto;
+  /* padding-left: 20px;
+  padding-right: 20px; */
+  /* background-color: #FFFFFF; 
+  border-radius: 10px;
+  overflow: hidden;
+  margin-top: -2px;  */
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
+/* .App-header {
+  background-color: rgb(255, 177, 32);
   height: 150px;
   padding: 20px;
   color: white;
-}
+} */
 
 .App-title {
   font-size: 1.5em;
@@ -25,4 +29,13 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+#root{
+  background-color: rgb(255, 177, 32);
+  max-width: 87%;
+  margin: 5% auto;
+  background-color: #FFFFFF; 
+  overflow: hidden;
+  margin-top: -2px;
 }
