--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,7 @@
 .App {
   text-align: center;
   background-color: rgb(255, 177, 32);
-  /* max-width: 87%;
-  margin: 5% auto;
-  /* padding-left: 20px;
-  padding-right: 20px; */
-  /* background-color: #FFFFFF; 
-  border-radius: 10px;
-  overflow: hidden;
-  margin-top: -2px;  */
 }
-
-/* .App-header {
-  background-color: rgb(255, 177, 32);
-  height: 150px;
-  padding: 20px;
-  color: white;
-} */
 
 .App-title {
   font-size: 1.5em;
@@ -31,11 +16,11 @@
   to { transform: rotate(360deg); }
 }
 
-#root{
+/* #root{
   background-color: rgb(255, 177, 32);
   max-width: 87%;
-  margin: 5% auto;
-  background-color: #FFFFFF; 
+  margin: 5% auto; */
+  /* background-color: #FFFFFF; 
   overflow: hidden;
-  margin-top: -2px;
-}
+  margin-top: -2px; 
+} */
