--- a/src/components-pages/Connect.css
+++ b/src/components-pages/Connect.css
@@ -16,11 +16,12 @@
 
 .coButton{
   margin-top: 10px;
+  padding-bottom: 10px;
 }
 
 .fbButton{
     margin-top: 10px;
-   
+
 }
 
 .s btn {
@@ -37,7 +38,7 @@ footer{
     position:absolute;
     bottom:0;
     width:100%;
-    padding-top:50px;
+    padding-top:240px;
     height:50px;
     }
 
