--- a/src/components-pages/Homepage.css
+++ b/src/components-pages/Homepage.css
@@ -1,22 +1,18 @@
-.Home {
-    text-align: center;
-    background-color: rgb(255, 177, 32);
-    background-repeat: repeat ;
-    background-position: 100%;
-    /* max-width: 100%;
-    max-height: 1000px; */
-    /* overflow: hidden;
-    /* margin-top: -2px;  */
-    height: 100%; 
-  }
+.home {
+  text-align: center;
+  background-color: rgb(255, 177, 32);
+  background-repeat: repeat ;
+  background-position: 100%;
+  height: 100%; 
+}
 
-  .App-logo{
-    float: center;
-    margin: 80px;
-    width: 50%;
-    height:50%;
-  }
+.app-logo{
+  float: center;
+  margin: 80px;
+  width: 50%;
+  height:50%;
+}
 
-.homeButton{
+.home-button{
   margin: 17%;
 }
