--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,12 @@ body {
   padding: 0;
 }
 
+* {
+  font-size: 4vh;
+}
+
 h1 {
-  font-size: 2.3em;
+  font-size: 5vh;
   font-weight: 500;
   display: inline;
 }
