--- a/src/components-modules/PageTemplate.css
+++ b/src/components-modules/PageTemplate.css
@@ -1,21 +1,58 @@
-.s-bg-orange {
-    background-color: #FFB72D;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    position: fixed;
-    width: 100%;
-    height: 100%;
+html,
+body {
+  height: 100%;
+  margin: 0;
 }
 
-.s-bg-white {
-    background-color: white;
+div.s-main-block {
+  height: 100vh;
+  min-height: 100%;
+}
+
+div.s-bg-orange {
+  background-color: #FFB72D;
+}
+
+div.s-bg-white {
+  background-color: white;
+}
+
+div.s-content-main {
+  display: flex;
+  justify-content: center;
+}
+
+div.s-content-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+div.s-box {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+span.s-text-bold {
+  font-weight: 500;
+}
+
+@media screen and (orientation: landscape) {
+  * {
+    font-size: 2.5vw;
+  }
+  .s-block-landscape {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    position: fixed;
-    width: 100%;
-    height: 100%;
+  }
+  .s-block-landscape * {
+    margin: 0 1em;
+    display: flex;
+  }
+}
+
+@media screen and (orientation: portrait) {
+  * {
+    font-size: 3vh;
+  }
 }
