--- a/src/components-modules/Input.css
+++ b/src/components-modules/Input.css
@@ -1,20 +1,20 @@
-.s-input {
-    height: 2.5em;
-    width: 15em;
+div.s-block-input-logo {
+    position: relative;
+    width: auto;
+}
+
+div.s-block-input-logo button {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+}
+
+input.s-input {
+    height: 1.7em;
+    width: 14em;
     padding: 0 2.5em 0 1em;
     border: 1px solid #000;
     border-radius: 5px;
     font-size: 1em;
     text-align: center;
-}
-
-.s-block-input-logo {
-    position: relative;
-    width: 14em;
-}
-
-.s-block-input-logo button {
-    position: absolute;
-    right: 0;
-    top: 5px;
 }
