--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,29 @@
-body {
+/* body {
   margin: 0;
   padding: 0;
+} */
+
+* {font-size: 3vh;}
+
+/* @media screen and (orientation: landscape) {
+  * {font-size: 3vw;}
 }
 
-* {
-  font-size: 3vh;
-}
+@media screen and (orientation: portrait) {
+  * {font-size: 3vh;}
+} */
 
 h1 {
   font-size: 5vh;
   font-weight: 500;
-  display: inline;
 }
 
-.merci{
-  font-size: 6vh;
+h2 {
+  font-size: 4vh;
+  font-weight: 400;
 }
 
-p{
-  font-size: 2.5vh;
- 
+h5 {
+  font-size: 3vh;
+  font-weight: 300;
 }
