--- a/src/class-generic.css
+++ b/src/class-generic.css
@@ -1,457 +1,347 @@
+* {
+  font-size: 10px;
+}
+
 /* PADDING */
-.s-p-0 {
-    padding: 0em;
-}
+.s-p-0 {padding: 0em;}
+.s-p-05 {padding: 0.5vh 0.5vw 0.5vh 0.5vw;}
+.s-p-1 {padding: 1vh 1vw 1vh 1vw;}
+.s-p-2 {padding: 2vh 2vw 2vh 2vw;}
+.s-p-3 {padding: 3vh 3vw 3vh 3vw;}
+.s-p-4 {padding: 4vh 4vw 4vh 4vw;}
+.s-p-5 {padding: 5vh 5vw 5vh 5vw;}
+.s-p-6 {padding: 6vh 6vw 6vh 6vw;}
+.s-p-7 {padding: 7vh 7vw 7vh 7vw;}
+.s-p-8 {padding: 8vh 8vw 8vh 8vw;}
+.s-p-9 {padding: 9vh 9vw 9vh 9vw;}
+.s-p-10 {padding: 10vh 10vw 10vh 10vw;}
+.s-p-11 {padding: 11vh 11vw 11vh 11vw;}
+.s-p-12 {padding: 12vh 12vw 12vh 12vw;}
+.s-p-13 {padding: 13vh 13vw 13vh 13vw;}
+.s-p-14 {padding: 14vh 14vw 14vh 14vw;}
+.s-p-15 {padding: 15vh 15vw 15vh 15vw;}
+.s-p-17 {padding: 17vh 17vw 17vh 17vw;}
+.s-p-17 {padding: 17vh 17vw 17vh 17vw;}
+.s-p-18 {padding: 18vh 18vw 18vh 18vw;}
+.s-p-19 {padding: 19vh 19vw 19vh 19vw;}
+.s-p-20 {padding: 20vh 20vw 20vh 20vw;}
 
-.s-p-05 {
-    padding: 0.5em;
-}
+.s-pt-0 {padding-top: 0vh;}
+.s-pt-05 {padding-top: 0.5vh;}
+.s-pt-1 {padding-top: 1vh;}
+.s-pt-2 {padding-top: 2vh;}
+.s-pt-3 {padding-top: 3vh;}
+.s-pt-4 {padding-top: 4vh;}
+.s-pt-5 {padding-top: 5vh;}
+.s-pt-6 {padding-top: 6vh;}
+.s-pt-7 {padding-top: 7vh;}
+.s-pt-8 {padding-top: 8vh;}
+.s-pt-9 {padding-top: 9vh;}
+.s-pt-10 {padding-top: 10vh;}
+.s-pt-11 {padding-top: 11vh;}
+.s-pt-12 {padding-top: 12vh;}
+.s-pt-13 {padding-top: 13vh;}
+.s-pt-14 {padding-top: 14vh;}
+.s-pt-15 {padding-top: 15vh;}
+.s-pt-16 {padding-top: 16vh;}
+.s-pt-17 {padding-top: 17vh;}
+.s-pt-18 {padding-top: 18vh;}
+.s-pt-19 {padding-top: 19vh;}
+.s-pt-20 {padding-top: 20vh;}
 
-.s-p-1 {
-    padding: 1em;
-}
+.s-pb-0 {padding-bottom: 0vh;}
+.s-pb-05 {padding-bottom: 0.5vh;}
+.s-pb-1 {padding-bottom: 1vh;}
+.s-pb-2 {padding-bottom: 2vh;}
+.s-pb-3 {padding-bottom: 3vh;}
+.s-pb-4 {padding-bottom: 4vh;}
+.s-pb-5 {padding-bottom: 5vh;}
+.s-pb-6 {padding-bottom: 6vh;}
+.s-pb-7 {padding-bottom: 7vh;}
+.s-pb-8 {padding-bottom: 8vh;}
+.s-pb-9 {padding-bottom: 9vh;}
+.s-pb-10 {padding-bottom: 10vh;}
+.s-pb-11 {padding-bottom: 11vh;}
+.s-pb-12 {padding-bottom: 12vh;}
+.s-pb-13 {padding-bottom: 13vh;}
+.s-pb-14 {padding-bottom: 14vh;}
+.s-pb-15 {padding-bottom: 15vh;}
+.s-pb-16 {padding-bottom: 16vh;}
+.s-pb-17 {padding-bottom: 17vh;}
+.s-pb-18 {padding-bottom: 18vh;}
+.s-pb-19 {padding-bottom: 19vh;}
+.s-pb-20 {padding-bottom: 20vh;}
 
-.s-p-2 {
-    padding: 2em;
-}
+.s-pl-0 {padding-left: 0vw;}
+.s-pl-05 {padding-left: 0.5vw;}
+.s-pl-1 {padding-left: 1vw;}
+.s-pl-2 {padding-left: 2vw;}
+.s-pl-3 {padding-left: 3vw;}
+.s-pl-4 {padding-left: 4vw;}
+.s-pl-5 {padding-left: 5vw;}
+.s-pl-6 {padding-left: 6vh;}
+.s-pl-7 {padding-left: 7vh;}
+.s-pl-8 {padding-left: 8vh;}
+.s-pl-9 {padding-left: 9vh;}
+.s-pl-10 {padding-left: 10vh;}
+.s-pl-11 {padding-left: 11vh;}
+.s-pl-12 {padding-left: 12vh;}
+.s-pl-13 {padding-left: 13vh;}
+.s-pl-14 {padding-left: 14vh;}
+.s-pl-15 {padding-left: 15vh;}
+.s-pl-16 {padding-left: 16vh;}
+.s-pl-17 {padding-left: 17vh;}
+.s-pl-18 {padding-left: 18vh;}
+.s-pl-19 {padding-left: 19vh;}
+.s-pl-20 {padding-left: 20vh;}
 
-.s-p-3 {
-    padding: 3em;
-}
+.s-pr-0 {padding-right: 0vw;}
+.s-pr-05 {padding-right: 0.5vw;}
+.s-pr-1 {padding-right: 1vw;}
+.s-pr-2 {padding-right: 2vw;}
+.s-pr-3 {padding-right: 3vw;}
+.s-pr-4 {padding-right: 4vw;}
+.s-pr-5 {padding-right: 5vw;}
+.s-pr-6 {padding-right: 6vh;}
+.s-pr-7 {padding-right: 7vh;}
+.s-pr-8 {padding-right: 8vh;}
+.s-pr-9 {padding-right: 9vh;}
+.s-pr-10 {padding-right: 10vh;}
+.s-pr-11 {padding-right: 11vh;}
+.s-pr-12 {padding-right: 12vh;}
+.s-pr-13 {padding-right: 13vh;}
+.s-pr-14 {padding-right: 14vh;}
+.s-pr-15 {padding-right: 15vh;}
+.s-pr-16 {padding-right: 16vh;}
+.s-pr-17 {padding-right: 17vh;}
+.s-pr-18 {padding-right: 18vh;}
+.s-pr-19 {padding-right: 19vh;}
+.s-pr-20 {padding-right: 20vh;}
 
-.s-p-4 {
-    padding: 4em;
-}
+.s-px-0 {padding-right: 0vw; padding-left: 0vw;}
+.s-px-05 {padding-right: 0.5vw; padding-left: 0.5vw;}
+.s-px-2 {padding-right: 2vw; padding-left: 2vw;}
+.s-px-3 {padding-right: 3vw; padding-left: 3vw;}
+.s-px-4 {padding-right: 4vw; padding-left: 4vw;}
+.s-px-5 {padding-right: 5vw; padding-left: 5vw;}
+.s-px-6 {padding-right: 6vw; padding-left: 6vw;}
+.s-px-7 {padding-right: 7vw; padding-left: 7vw;}
+.s-px-8 {padding-right: 8vw; padding-left: 8vw;}
+.s-px-9 {padding-right: 9vw; padding-left: 9vw;}
+.s-px-10 {padding-right: 10vw; padding-left: 10vw;}
+.s-px-11 {padding-right: 11vw; padding-left: 11vw;}
+.s-px-12 {padding-right: 12vw; padding-left: 12vw;}
+.s-px-13 {padding-right: 13vw; padding-left: 13vw;}
+.s-px-14 {padding-right: 14vw; padding-left: 14vw;}
+.s-px-15 {padding-right: 15vw; padding-left: 15vw;}
+.s-px-16 {padding-right: 16vw; padding-left: 16vw;}
+.s-px-17 {padding-right: 17vw; padding-left: 17vw;}
+.s-px-18 {padding-right: 18vw; padding-left: 18vw;}
+.s-px-19 {padding-right: 19vw; padding-left: 19vw;}
+.s-px-20 {padding-right: 20vw; padding-left: 20vw;}
 
-.s-p-5 {
-    padding: 5em;
-}
-
-.s-pt-0 {
-    padding-top: 0em;
-}
-
-.s-pt-05 {
-    padding-top: 0.5em;
-}
-
-.s-pt-1 {
-    padding-top: 1em;
-}
-
-.s-pt-2 {
-    padding-top: 2em;
-}
-
-.s-pt-3 {
-    padding-top: 3em;
-}
-
-.s-pt-4 {
-    padding-top: 4em;
-}
-
-.s-pt-5 {
-    padding-top: 5em;
-}
-
-.s-pb-0 {
-    padding-bottom: 0em;
-}
-
-.s-pb-05 {
-    padding-bottom: 0.5em;
-}
-
-.s-pb-1 {
-    padding-bottom: 1em;
-}
-
-.s-pb-2 {
-    padding-bottom: 2em;
-}
-
-.s-pb-3 {
-    padding-bottom: 3em;
-}
-
-.s-pb-4 {
-    padding-bottom: 4em;
-}
-
-.s-pb-5 {
-    padding-bottom: 5em;
-}
-
-.s-pl-0 {
-    padding-left: 0em;
-}
-
-.s-pl-05 {
-    padding-left: 0.5em;
-}
-
-.s-pl-1 {
-    padding-left: 1em;
-}
-
-.s-pl-2 {
-    padding-left: 2em;
-}
-
-.s-pl-3 {
-    padding-left: 3em;
-}
-
-.s-pl-4 {
-    padding-left: 4em;
-}
-
-.s-pl-5 {
-    padding-left: 5em;
-}
-
-.s-pr-0 {
-    padding-right: 0em;
-}
-
-.s-pr-05 {
-    padding-right: 0.5em;
-}
-
-.s-pr-1 {
-    padding-right: 1em;
-}
-
-.s-pr-2 {
-    padding-right: 2em;
-}
-
-.s-pr-3 {
-    padding-right: 3em;
-}
-
-.s-pr-4 {
-    padding-right: 4em;
-}
-
-.s-pr-5 {
-    padding-right: 5em;
-}
-
-.s-px-0 {
-    padding-right: 0em;
-    padding-left: 0em;
-}
-
-.s-px-05 {
-    padding-right: 0.5em;
-    padding-left: 0.5em;
-}
-
-.s-px-2 {
-    padding-right: 2em;
-    padding-left: 2em;
-}
-
-.s-px-3 {
-    padding-right: 3em;
-    padding-left: 3em;
-}
-
-.s-px-4 {
-    padding-right: 4em;
-    padding-left: 4em;
-}
-
-.s-px-5 {
-    padding-right: 5em;
-    padding-left: 5em;
-}
-
-.s-py-0 {
-    padding-top: 0em;
-    padding-bottom: 0em;
-}
-
-.s-py-05 {
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
-}
-
-.s-py-1 {
-    padding-top: 1em;
-    padding-bottom: 1em;
-}
-
-.s-py-2 {
-    padding-top: 2em;
-    padding-bottom: 2em;
-}
-
-.s-py-3 {
-    padding-top: 3em;
-    padding-bottom: 3em;
-}
-
-.s-py-4 {
-    padding-top: 4em;
-    padding-bottom: 4em;
-}
-
-.s-py-5 {
-    padding-top: 5em;
-    padding-bottom: 5em;
-}
+.s-py-0 {padding-top: 0vh; padding-bottom: 0vh;}
+.s-py-05 {padding-top: 0.5vh; padding-bottom: 0.5vh;}
+.s-py-1 {padding-top: 1vh; padding-bottom: 1vh;}
+.s-py-2 {padding-top: 2vh; padding-bottom: 2vh;}
+.s-py-3 {padding-top: 3vh; padding-bottom: 3vh;}
+.s-py-4 {padding-top: 4vh; padding-bottom: 4vh;}
+.s-py-5 {padding-top: 5vh; padding-bottom: 5vh;}
+.s-py-6 {padding-top: 6vh; padding-bottom: 6vh;}
+.s-py-7 {padding-top: 7vh; padding-bottom: 7vh;}
+.s-py-8 {padding-top: 8vh; padding-bottom: 8vh;}
+.s-py-9 {padding-top: 9vh; padding-bottom: 9vh;}
+.s-py-10 {padding-top: 10vh; padding-bottom: 10vh;}
+.s-py-11 {padding-top: 11vh; padding-bottom: 11vh;}
+.s-py-12 {padding-top: 12vh; padding-bottom: 12vh;}
+.s-py-13 {padding-top: 13vh; padding-bottom: 13vh;}
+.s-py-14 {padding-top: 14vh; padding-bottom: 14vh;}
+.s-py-15 {padding-top: 15vh; padding-bottom: 15vh;}
+.s-py-16 {padding-top: 16vh; padding-bottom: 16vh;}
+.s-py-17 {padding-top: 17vh; padding-bottom: 17vh;}
+.s-py-18 {padding-top: 18vh; padding-bottom: 18vh;}
+.s-py-19 {padding-top: 19vh; padding-bottom: 19vh;}
+.s-py-20 {padding-top: 20vh; padding-bottom: 20vh;}
 
 /* MARGIN */
-.s-m-0 {
-    margin: 0em;
-}
+.s-m-0 {margin: 0em;}
+.s-m-05 {margin: 0.5vh 0.5vw 0.5vh 0.5vw;}
+.s-m-1 {margin: 1vh 1vw 1vh 1vw;}
+.s-m-2 {margin: 2vh 2vw 2vh 2vw;}
+.s-m-3 {margin: 3vh 3vw 3vh 3vw;}
+.s-m-4 {margin: 4vh 4vw 4vh 4vw;}
+.s-m-5 {margin: 5vh 5vw 5vh 5vw;}
+.s-m-6 {margin: 6vh 6vw 6vh 6vw;}
+.s-m-7 {margin: 7vh 7vw 7vh 7vw;}
+.s-m-8 {margin: 8vh 8vw 8vh 8vw;}
+.s-m-9 {margin: 9vh 9vw 9vh 9vw;}
+.s-m-10 {margin: 10vh 10vw 10vh 10vw;}
+.s-m-11 {margin: 11vh 11vw 11vh 11vw;}
+.s-m-12 {margin: 12vh 12vw 12vh 12vw;}
+.s-m-13 {margin: 13vh 13vw 13vh 13vw;}
+.s-m-14 {margin: 14vh 14vw 14vh 14vw;}
+.s-m-15 {margin: 15vh 15vw 15vh 15vw;}
+.s-m-17 {margin: 17vh 17vw 17vh 17vw;}
+.s-m-17 {margin: 17vh 17vw 17vh 17vw;}
+.s-m-18 {margin: 18vh 18vw 18vh 18vw;}
+.s-m-19 {margin: 19vh 19vw 19vh 19vw;}
+.s-m-20 {margin: 20vh 20vw 20vh 20vw;}
 
-.s-m-05 {
-    margin: 0.5em;
-}
+.s-mt-0 {margin-top: 0vh;}
+.s-mt-05 {margin-top: 0.5vh;}
+.s-mt-1 {margin-top: 1vh;}
+.s-mt-2 {margin-top: 2vh;}
+.s-mt-3 {margin-top: 3vh;}
+.s-mt-4 {margin-top: 4vh;}
+.s-mt-5 {margin-top: 5vh;}
+.s-mt-6 {margin-top: 6vh;}
+.s-mt-7 {margin-top: 7vh;}
+.s-mt-8 {margin-top: 8vh;}
+.s-mt-9 {margin-top: 9vh;}
+.s-mt-10 {margin-top: 10vh;}
+.s-mt-11 {margin-top: 11vh;}
+.s-mt-12 {margin-top: 12vh;}
+.s-mt-13 {margin-top: 13vh;}
+.s-mt-14 {margin-top: 14vh;}
+.s-mt-15 {margin-top: 15vh;}
+.s-mt-16 {margin-top: 16vh;}
+.s-mt-17 {margin-top: 17vh;}
+.s-mt-18 {margin-top: 18vh;}
+.s-mt-19 {margin-top: 19vh;}
+.s-mt-20 {margin-top: 20vh;}
 
-.s-m-1 {
-    margin: 1em;
-}
+.s-mb-0 {margin-bottom: 0vh;}
+.s-mb-05 {margin-bottom: 0.5vh;}
+.s-mb-1 {margin-bottom: 1vh;}
+.s-mb-2 {margin-bottom: 2vh;}
+.s-mb-3 {margin-bottom: 3vh;}
+.s-mb-4 {margin-bottom: 4vh;}
+.s-mb-5 {margin-bottom: 5vh;}
+.s-mb-6 {margin-bottom: 6vh;}
+.s-mb-7 {margin-bottom: 7vh;}
+.s-mb-8 {margin-bottom: 8vh;}
+.s-mb-9 {margin-bottom: 9vh;}
+.s-mb-10 {margin-bottom: 10vh;}
+.s-mb-11 {margin-bottom: 11vh;}
+.s-mb-12 {margin-bottom: 12vh;}
+.s-mb-13 {margin-bottom: 13vh;}
+.s-mb-14 {margin-bottom: 14vh;}
+.s-mb-15 {margin-bottom: 15vh;}
+.s-mb-16 {margin-bottom: 16vh;}
+.s-mb-17 {margin-bottom: 17vh;}
+.s-mb-18 {margin-bottom: 18vh;}
+.s-mb-19 {margin-bottom: 19vh;}
+.s-mb-20 {margin-bottom: 20vh;}
 
-.s-m-2 {
-    margin: 2em;
-}
+.s-ml-0 {margin-left: 0vw;}
+.s-ml-05 {margin-left: 0.5vw;}
+.s-ml-1 {margin-left: 1vw;}
+.s-ml-2 {margin-left: 2vw;}
+.s-ml-3 {margin-left: 3vw;}
+.s-ml-4 {margin-left: 4vw;}
+.s-ml-5 {margin-left: 5vw;}
+.s-ml-6 {margin-left: 6vh;}
+.s-ml-7 {margin-left: 7vh;}
+.s-ml-8 {margin-left: 8vh;}
+.s-ml-9 {margin-left: 9vh;}
+.s-ml-10 {margin-left: 10vh;}
+.s-ml-11 {margin-left: 11vh;}
+.s-ml-12 {margin-left: 12vh;}
+.s-ml-13 {margin-left: 13vh;}
+.s-ml-14 {margin-left: 14vh;}
+.s-ml-15 {margin-left: 15vh;}
+.s-ml-16 {margin-left: 16vh;}
+.s-ml-17 {margin-left: 17vh;}
+.s-ml-18 {margin-left: 18vh;}
+.s-ml-19 {margin-left: 19vh;}
+.s-ml-20 {margin-left: 20vh;}
 
-.s-m-3 {
-    margin: 3em;
-}
+.s-mr-0 {margin-right: 0vw;}
+.s-mr-05 {margin-right: 0.5vw;}
+.s-mr-1 {margin-right: 1vw;}
+.s-mr-2 {margin-right: 2vw;}
+.s-mr-3 {margin-right: 3vw;}
+.s-mr-4 {margin-right: 4vw;}
+.s-mr-5 {margin-right: 5vw;}
+.s-mr-6 {margin-right: 6vh;}
+.s-mr-7 {margin-right: 7vh;}
+.s-mr-8 {margin-right: 8vh;}
+.s-mr-9 {margin-right: 9vh;}
+.s-mr-10 {margin-right: 10vh;}
+.s-mr-11 {margin-right: 11vh;}
+.s-mr-12 {margin-right: 12vh;}
+.s-mr-13 {margin-right: 13vh;}
+.s-mr-14 {margin-right: 14vh;}
+.s-mr-15 {margin-right: 15vh;}
+.s-mr-16 {margin-right: 16vh;}
+.s-mr-17 {margin-right: 17vh;}
+.s-mr-18 {margin-right: 18vh;}
+.s-mr-19 {margin-right: 19vh;}
+.s-mr-20 {margin-right: 20vh;}
 
-.s-m-4 {
-    margin: 4em;
-}
+.s-mx-0 {margin-right: 0vw; margin-left: 0vw;}
+.s-mx-05 {margin-right: 0.5vw; margin-left: 0.5vw;}
+.s-mx-2 {margin-right: 2vw; margin-left: 2vw;}
+.s-mx-3 {margin-right: 3vw; margin-left: 3vw;}
+.s-mx-4 {margin-right: 4vw; margin-left: 4vw;}
+.s-mx-5 {margin-right: 5vw; margin-left: 5vw;}
+.s-mx-6 {margin-right: 6vw; margin-left: 6vw;}
+.s-mx-7 {margin-right: 7vw; margin-left: 7vw;}
+.s-mx-8 {margin-right: 8vw; margin-left: 8vw;}
+.s-mx-9 {margin-right: 9vw; margin-left: 9vw;}
+.s-mx-10 {margin-right: 10vw; margin-left: 10vw;}
+.s-mx-11 {margin-right: 11vw; margin-left: 11vw;}
+.s-mx-12 {margin-right: 12vw; margin-left: 12vw;}
+.s-mx-13 {margin-right: 13vw; margin-left: 13vw;}
+.s-mx-14 {margin-right: 14vw; margin-left: 14vw;}
+.s-mx-15 {margin-right: 15vw; margin-left: 15vw;}
+.s-mx-16 {margin-right: 16vw; margin-left: 16vw;}
+.s-mx-17 {margin-right: 17vw; margin-left: 17vw;}
+.s-mx-18 {margin-right: 18vw; margin-left: 18vw;}
+.s-mx-19 {margin-right: 19vw; margin-left: 19vw;}
+.s-mx-20 {margin-right: 20vw; margin-left: 20vw;}
 
-.s-m-5 {
-    margin: 5em;
-}
-
-.s-mt-0 {
-    margin-top: 0em;
-}
-
-.s-mt-05 {
-    margin-top: 0.5em;
-}
-
-.s-mt-1 {
-    margin-top: 1em;
-}
-
-.s-mt-2 {
-    margin-top: 2em;
-}
-
-.s-mt-3 {
-    margin-top: 3em;
-}
-
-.s-mt-4 {
-    margin-top: 4em;
-}
-
-.s-mt-5 {
-    margin-top: 5em;
-}
-
-.s-mb-0 {
-    margin-bottom: 0em;
-}
-
-.s-mb-05 {
-    margin-bottom: 0.5em;
-}
-
-.s-mb-1 {
-    margin-bottom: 1em;
-}
-
-.s-mb-2 {
-    margin-bottom: 2em;
-}
-
-.s-mb-3 {
-    margin-bottom: 3em;
-}
-
-.s-mb-4 {
-    margin-bottom: 4em;
-}
-
-.s-mb-5 {
-    margin-bottom: 5em;
-}
-
-.s-ml-0 {
-    margin-left: 0em;
-}
-
-.s-ml-05 {
-    margin-left: 0.5em;
-}
-
-.s-ml-1 {
-    margin-left: 1em;
-}
-
-.s-ml-2 {
-    margin-left: 2em;
-}
-
-.s-ml-3 {
-    margin-left: 3em;
-}
-
-.s-ml-4 {
-    margin-left: 4em;
-}
-
-.s-ml-5 {
-    margin-left: 5em;
-}
-
-.s-mr-0 {
-    margin-right: 0em;
-}
-
-.s-mr-05 {
-    margin-right: 0.5em;
-}
-
-.s-mr-1 {
-    margin-right: 1em;
-}
-
-.s-mr-2 {
-    margin-right: 2em;
-}
-
-.s-mr-3 {
-    margin-right: 3em;
-}
-
-.s-mr-4 {
-    margin-right: 4em;
-}
-
-.s-mr-5 {
-    margin-right: 5em;
-}
-
-.s-mx-0 {
-    margin-right: 0em;
-    margin-left: 0em;
-}
-
-.s-mx-05 {
-    margin-right: 0.5em;
-    margin-left: 0.5em;
-}
-
-.s-mx-2 {
-    margin-right: 2em;
-    margin-left: 2em;
-}
-
-.s-mx-3 {
-    margin-right: 3em;
-    margin-left: 3em;
-}
-
-.s-mx-4 {
-    margin-right: 4em;
-    margin-left: 4em;
-}
-
-.s-mx-5 {
-    margin-right: 5em;
-    margin-left: 5em;
-}
-
-.s-my-0 {
-    margin-top: 0em;
-    margin-bottom: 0em;
-}
-
-.s-my-05 {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-}
-
-.s-my-1 {
-    margin-top: 1em;
-    margin-bottom: 1em;
-}
-
-.s-my-2 {
-    margin-top: 2em;
-    margin-bottom: 2em;
-}
-
-.s-my-3 {
-    margin-top: 3em;
-    margin-bottom: 3em;
-}
-
-.s-my-4 {
-    margin-top: 4em;
-    margin-bottom: 4em;
-}
-
-.s-my-5 {
-    margin-top: 5em;
-    margin-bottom: 5em;
-}
+.s-my-0 {margin-top: 0vh; margin-bottom: 0vh;}
+.s-my-05 {margin-top: 0.5vh; margin-bottom: 0.5vh;}
+.s-my-1 {margin-top: 1vh; margin-bottom: 1vh;}
+.s-my-2 {margin-top: 2vh; margin-bottom: 2vh;}
+.s-my-3 {margin-top: 3vh; margin-bottom: 3vh;}
+.s-my-4 {margin-top: 4vh; margin-bottom: 4vh;}
+.s-my-5 {margin-top: 5vh; margin-bottom: 5vh;}
+.s-my-6 {margin-top: 6vh; margin-bottom: 6vh;}
+.s-my-7 {margin-top: 7vh; margin-bottom: 7vh;}
+.s-my-8 {margin-top: 8vh; margin-bottom: 8vh;}
+.s-my-9 {margin-top: 9vh; margin-bottom: 9vh;}
+.s-my-10 {margin-top: 10vh; margin-bottom: 10vh;}
+.s-my-11 {margin-top: 11vh; margin-bottom: 11vh;}
+.s-my-12 {margin-top: 12vh; margin-bottom: 12vh;}
+.s-my-13 {margin-top: 13vh; margin-bottom: 13vh;}
+.s-my-14 {margin-top: 14vh; margin-bottom: 14vh;}
+.s-my-15 {margin-top: 15vh; margin-bottom: 15vh;}
+.s-my-16 {margin-top: 16vh; margin-bottom: 16vh;}
+.s-my-17 {margin-top: 17vh; margin-bottom: 17vh;}
+.s-my-18 {margin-top: 18vh; margin-bottom: 18vh;}
+.s-my-19 {margin-top: 19vh; margin-bottom: 19vh;}
+.s-my-20 {margin-top: 20vh; margin-bottom: 20vh;}
 
 /* POSITION FIXED */
-.s-fixed {
-    position: fixed;
-}
+.s-fixed {position: fixed;}
+.s-fixed-b {position: fixed; bottom: 0}
+.s-fixed-br {position: fixed; bottom: 0; right: 0}
+.s-fixed-bl {position: fixed; bottom: 0; left: 0}
+.s-fixed-t {position: fixed; top: 0}
+.s-fixed-tr {position: fixed; top: 0; right: 0}
+.s-fixed-tl {position: fixed; top: 0; left: 0}
 
-.s-fixed-b {
-    position: fixed;
-    bottom: 0
-}
-
-.s-fixed-br {
-    position: fixed;
-    bottom: 0;
-    right: 0
-}
-
-.s-fixed-bl {
-    position: fixed;
-    bottom: 0;
-    left: 0
-}
-
-.s-fixed-t {
-    position: fixed;
-    top: 0
-}
-
-.s-fixed-tr {
-    position: fixed;
-    top: 0;
-    right: 0
-}
-
-.s-fixed-tl {
-    position: fixed;
-    top: 0;
-    left: 0
-}
+.s-justify-content-center {justify-content: center}
 
 .s-d-flex {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  overflow-x: hidden;
+}
+
+.s-d-flex1 {
+  text-align: center;
 }
