--- a/src/class-generic.css
+++ b/src/class-generic.css
@@ -2,6 +2,11 @@
   font-size: 10px;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 /* PADDING */
 .s-p-0 {padding: 0em;}
 .s-p-05 {padding: 0.5vh 0.5vw 0.5vh 0.5vw;}
