--- a/src/components-modules/Shoppingcart.css
+++ b/src/components-modules/Shoppingcart.css
@@ -12,6 +12,10 @@ div.s-block-cart {
   border-radius: 6em 0 0 0;
 }
 
+div.s-block-cart a {
+  display: flex;
+}
+
 div.s-block-cart img {
   margin: 0.5em 0 0 0.5em;
 }
@@ -20,5 +24,5 @@ div.s-block-cart p {
   position: absolute;
   font-size: 5vh;
   font-weight: 600;
-  margin: 1vh 0 0 1vw;
+  margin: 3vh 0 0 8vw;
 }
