--- a/src/components-modules/Input.css
+++ b/src/components-modules/Input.css
@@ -7,7 +7,7 @@ div.s-main-input-logo {
 
 div.s-block-input-logo {
     display: flex;
-    width: 3vw;
+    min-width: 60vw !important;
     justify-content: space-between;
     align-items: center;
     border: 1px solid #000;
