--- a/src/components-modules/Shoppingcart.css
+++ b/src/components-modules/Shoppingcart.css
@@ -20,9 +20,8 @@ div.s-block-cart img {
   margin: 0.5em 0 0 0.5em;
 }
 
-div.s-block-cart p {
+div.s-block-cart h3 {
   position: absolute;
-  font-size: 5vh;
   font-weight: 600;
-  margin: 3vh 0 0 8vw;
+  margin: 20px 0 0 28px;
 }
