--- a/src/components-slide/SlideItem.css
+++ b/src/components-slide/SlideItem.css
@@ -22,12 +22,14 @@ div.s-im-block {
 
 .s-item-count {
   display: flex;
+  padding: 10px;
   width: 70%;
   justify-content: space-between;
 }
 
 .s-thumbnail-slide {
   display: flex;
+  padding: 10px;
   align-items: center;
   flex-direction: column;
   width: 90%;
