--- a/src/components-modules/PageTemplate.css
+++ b/src/components-modules/PageTemplate.css
@@ -38,6 +38,18 @@ span.s-text-bold {
   * {
     font-size: 2.7vw;
   }
+  h1 {
+    font-size: 4vw;
+    font-weight: 500;
+  }
+  h2 {
+    font-size: 3vw;
+    font-weight: 400;
+  }
+  h5 {
+    font-size: 2vw;
+    font-weight: 300;
+  }
   .s-block-landscape {
     display: flex;
   }
@@ -53,5 +65,17 @@ span.s-text-bold {
 @media screen and (orientation: portrait) {
   * {
     font-size: 2.7vh;
+  }
+  h1 {
+    font-size: 5vh;
+    font-weight: 500;
+  }
+  h2 {
+    font-size: 4vh;
+    font-weight: 400;
+  }
+  h5 {
+    font-size: 3vh;
+    font-weight: 300;
   }
 }
